second example in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -114,7 +114,7 @@ model {
 We first fit the model using Stan:
 
 ```{r, eval = T, cache=T, results='hide'}
-library(iwmm)
+library("iwmm")
 
 normal_model <- example_iwmm_model("normal_model")
 
@@ -146,6 +146,59 @@ We can check that the expectation matches the posterior mean
 first_moment$expectation
 colMeans(as.matrix(fit))[c("mu", "log_sigma")]
 ```
+
+The package can also compute expectations over distributions
+that are different than the one where the draws are from.
+Let us try to evaluate the posterior mean when the last observation is removed.
+We achieve this by defining a `log_ratio_fun`
+which we can use to indicate the ratio of the target distribution and
+the existing posterior distribution.
+Since the target distribution is the posterior with
+one observation removed, the ratio function is the inverse of the
+likelihood of that observation. The log ratio function is thus
+the negative log likelihood of the last observation.
+
+
+```{r, eval = T}
+log_ratio_fun <- function(draws, fit, ...) {
+    cdraws <- constrain_draws(fit, draws)
+    ll <- posterior::merge_chains(
+      posterior::subset_draws(cdraws, variable = "log_lik")
+    )
+    -ll[,,10]
+  }
+
+first_moment_loo <- moment_match(
+  fit,
+  log_ratio_fun=log_ratio_fun,
+  expectation_fun = expectation_fun_first_moment
+)
+```
+
+Let us compare this to the posterior mean we get by actually fitting the model again without
+the last observation.
+
+```{r, eval = T, cache=T, results='hide'}
+loo_data <- normal_model$data
+loo_data$x <- loo_data$x[-loo_data$N]
+loo_data$N <- loo_data$N - 1
+
+fit_loo <- rstan::stan(
+  model_code = normal_model$model_code,
+  data = loo_data,
+  refresh = FALSE,
+  seed = 1234
+)
+```
+
+
+```{r, eval = T}
+first_moment_loo$expectation
+colMeans(as.matrix(fit_loo))[c("mu", "log_sigma")]
+```
+
+
+
 
 ## References
 
