--- a/vignettes/importance_sampling_bootstrap.Rmd
+++ b/vignettes/importance_sampling_bootstrap.Rmd
@@ -403,9 +403,11 @@ bayesplot::ppc_dens_overlay(x, xpred[1:100, ])
 
 ## References
 
-Paananen, T., Piironen, J., Buerkner, P.-C., Vehtari, A. (2020). Implicitly Adaptive Importance Sampling. [arXiv preprint arXiv:1906.08850](http://arxiv.org/abs/1906.08850).
+Paananen, T., Piironen, J., Bürkner, P.-C., and Vehtari, A.
+Implicitly Adaptive Importance Sampling. _Stat Comput_ **31**, 16 (2021).
+([paper](https://doi.org/10.1007/s11222-020-09982-2))([code](https://github.com/topipa/iter-mm-paper))
 
-Stan Development Team (2020) _RStan: the R interface to Stan, Version 2.21.2_   https://mc-stan.org
+Stan Development Team (2023) _RStan: the R interface to Stan, Version 2.21.8_   https://mc-stan.org
 
 Vehtari, A., Gelman, A., and Gabry, J. (2017). Practical Bayesian model evaluation using leave-one-out cross-validation and WAIC. _Statistics and Computing_. 27(5), 1413--1432. \doi:10.1007/s11222-016-9696-4. Links: [published](http://link.springer.com/article/10.1007\%2Fs11222-016-9696-4) | [arXiv preprint](http://arxiv.org/abs/1507.04544).
 
